# high-noise-deblurring

./: LICENSE  README.md  index.html  run.sh
.ipol/: Dockerfile  run.sh
ffdnet-denoiser/: models.py  requirements.txt  run.sh  test_ffdnet_ipol.py  utils.py
kernel-estimation/: Makefile  README.txt
kernel-estimation/imscript/: downscale.c
kernel-estimation/src/: estimate_kernel.cpp  estimate_kernel.hpp  utils.hpp
nonblind-deconvolution/: CMakeLists.txt  better_than_std.hpp  deblur.cpp  deblur.hpp  edgetaper.hpp  fft.hpp  fftw_allocator.hpp  image.hpp  image_expr.hpp  optimization.hpp  smapa.h  utils.hpp  vec2.hpp
nonblind-deconvolution/iio/: .travis.yml  iio.c
ponomarenko-noise-estimation/: Makefile  algo.cpp  algo.h  curve_filter.cpp  curve_filter.h
ponomarenko-noise-estimation/framework/: CFramework.cpp  CFramework.h  CHistogram.cpp  CImage.cpp  CImage.h  CInspector.cpp  CInspector.h  framework.cpp  libparser.cpp  libparser.h  operations.cpp
